feat: ve xong sidebar

--- a/pages/index.html
+++ b/pages/index.html
@@ -11,107 +11,131 @@
     <div class="container">
       <div class="sidebar">
         <div class="sidebar__header">
-          <div class="sidebar__option"></div>
-          <div class="sidebar__logo"></div>
-          <span class="text-menu">KẾ TOÁN</span>
+          <div class="icon w-h-24 m-16 sidebar__option"></div>
+          <div class="sidebar__logo-wrapper">
+            <div class="sidebar__logo"></div>
+            <span class="text-menu">KẾ TOÁN</span>
+          </div>
         </div>
         <div class="menu">
           <div class="menu__item">
-            <a class="menu-item__link" href="#">
-              <div class="menu-item__icon sidebar__dashboard"></div>
+            <a
+              class="menu-item__link menu-item__link--active"
+              href="#"
+              data-c-tooltip="Hế lo"
+            >
+              <div class="icon w-h-24 m-12 sidebar__dashboard"></div>
               <div class="menu-item__title">Tổng quan</div>
             </a>
           </div>
           <div class="menu__item">
-            <a class="menu-item__link" href="#">
-              <div class="menu-item__icon sidebar__cash"></div>
+            <a class="menu-item__link" href="#" data-c-tooltip="Hế lo">
+              <div class="icon w-h-24 m-12 sidebar__cash"></div>
               <div class="menu-item__title">Tiền mặt</div>
             </a>
           </div>
           <div class="menu__item">
-            <a class="menu-item__link" href="#">
-              <div class="menu-item__icon sidebar__bank"></div>
+            <a class="menu-item__link" href="#" data-c-tooltip="Hế lo">
+              <div class="icon w-h-24 m-12 sidebar__bank"></div>
               <div class="menu-item__title">Tiền gửi</div>
             </a>
           </div>
           <div class="menu__item">
-            <a class="menu-item__link" href="#">
-              <div class="menu-item__icon sidebar__Purchase"></div>
+            <a class="menu-item__link" href="#" data-c-tooltip="Hế lo">
+              <div class="icon w-h-24 m-12 sidebar__purchase"></div>
               <div class="menu-item__title">Mua hàng</div>
             </a>
           </div>
           <div class="menu__item">
-            <a class="menu-item__link" href="#">
-              <div class="menu-item__icon sidebar__sale"></div>
+            <a class="menu-item__link" href="#" data-c-tooltip="Hế lo">
+              <div class="icon w-h-24 m-12 sidebar__sale"></div>
               <div class="menu-item__title">Bán hàng</div>
             </a>
           </div>
           <div class="menu__item">
-            <a class="menu-item__link" href="#">
-              <div class="menu-item__icon sidebar__invoice"></div>
+            <a class="menu-item__link" href="#" data-c-tooltip="Hế lo">
+              <div class="icon w-h-24 m-12 sidebar__invoice"></div>
               <div class="menu-item__title">Quản lý đơn</div>
             </a>
           </div>
           <div class="menu__item">
-            <a class="menu-item__link" href="#">
-              <div class="menu-item__icon sidebar__stock"></div>
+            <a class="menu-item__link" href="#" data-c-tooltip="Hế lo">
+              <div class="icon w-h-24 m-12 sidebar__stock"></div>
               <div class="menu-item__title">Kho</div>
             </a>
           </div>
           <div class="menu__item">
-            <a class="menu-item__link" href="#">
-              <div class="menu-item__icon sidebar__tools"></div>
+            <a class="menu-item__link" href="#" data-c-tooltip="Hế lo">
+              <div class="icon w-h-24 m-12 sidebar__tools"></div>
               <div class="menu-item__title">Công cụ dụng cụ</div>
             </a>
           </div>
           <div class="menu__item">
-            <a class="menu-item__link" href="#">
-              <div class="menu-item__icon sidebar__fixed-assets"></div>
+            <a class="menu-item__link" href="#" data-c-tooltip="Hế lo">
+              <div class="icon w-h-24 m-12 sidebar__fixed-assets"></div>
               <div class="menu-item__title">Tài sản cố định</div>
             </a>
           </div>
+
           <div class="menu__item">
-            <a class="menu-item__link" href="#">
-              <div class="menu-item__icon sidebar__tax"></div>
-              <div class="menu-item__title">Tiền lương</div>
-            </a>
-          </div>
-          <div class="menu__item">
-            <a class="menu-item__link" href="#">
-              <div class="menu-item__icon sidebar__price"></div>
+            <a class="menu-item__link" href="#" data-c-tooltip="Hế lo">
+              <div class="icon w-h-24 m-12 sidebar__tax"></div>
               <div class="menu-item__title">Thuế</div>
             </a>
           </div>
           <div class="menu__item">
-            <a class="menu-item__link" href="#">
-              <div class="menu-item__icon sidebar__genneral"></div>
+            <a class="menu-item__link" href="#" data-c-tooltip="Hế lo">
+              <div class="icon w-h-24 m-12 sidebar__price"></div>
               <div class="menu-item__title">Giá thành</div>
             </a>
           </div>
           <div class="menu__item">
-            <a class="menu-item__link" href="#">
-              <div class="menu-item__icon sidebar__budget"></div>
+            <a class="menu-item__link" href="#" data-c-tooltip="Hế lo">
+              <div class="icon w-h-24 m-12 sidebar__general"></div>
               <div class="menu-item__title">Tổng hợp</div>
             </a>
           </div>
           <div class="menu__item">
-            <a class="menu-item__link" href="#">
-              <div class="menu-item__icon sidebar__report"></div>
+            <a class="menu-item__link" href="#" data-c-tooltip="Hế lo">
+              <div class="icon w-h-24 m-12 sidebar__budget"></div>
+              <div class="menu-item__title">Ngân sách</div>
+            </a>
+          </div>
+          <div class="menu__item">
+            <a class="menu-item__link" href="#" data-c-tooltip="Hế lo">
+              <div class="icon w-h-24 m-12 sidebar__report"></div>
               <div class="menu-item__title">Báo cáo</div>
             </a>
           </div>
           <div class="menu__item">
-            <a class="menu-item__link" href="#">
-              <div class="menu-item__icon sidebar__finance"></div>
+            <a class="menu-item__link" href="#" data-c-tooltip="Hế lo">
+              <div class="icon w-h-24 m-12 sidebar__finance"></div>
               <div class="menu-item__title">Phân tích tài chính</div>
             </a>
           </div>
         </div>
       </div>
       <div class="main">
+        <div class="main__header">
+          <div class="main__header--left">
+            <div class="icon w-h-24 header__icon"></div>
+            <div class="header__branch">CÔNG TY TNHH SONG VIỆT - Misatest</div>
+            <div class="icon w-h-24 header__branch-drop-down"></div>
+          </div>
+          <div class="main__header--right">
+            <div class="icon w-h-24 header__notify"></div>
+            <button class="header__user">
+              <div class="icon user__avt"></div>
+              <div class="user__name">Hồ Văn Anh</div>
+              <div class="icon w-h-24 user__icon-drop-down"></div>
+            </button>
+          </div>
+        </div>
         <div class="content">
-          <div class="content__title"></div>
-          <div class="content__toolbar"></div>
+          <div class="content__toolbar">
+            <div class="title content__title">Nhân viên</div>
+            <button id="btn--add" class="btn">Thêm mới nhân viên</button>
+          </div>
           <div class="content__list">
             <div class="list__table"></div>
             <div class="list__pagination"></div>
