feat: ve xong giao dien nguoi dung

--- a/pages/index.html
+++ b/pages/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>
+      Nhân viên | Danh mục | (SMECloud) CÔNG TY TNHH SONG VIỆT - Misatest | KẾ
+      TOÁN
+    </title>
+
+    <link rel="shortcut icon" href="../assets/favicon.ico" />
     <link rel="stylesheet" href="../css/main.css" />
   </head>
   <body>
+    <!-- Container -->
     <div class="container">
+      <!-- sidebar -->
       <div class="sidebar">
         <div class="sidebar__header">
           <div class="icon w-h-24 m-16 sidebar__option"></div>
@@ -17,112 +24,121 @@
             <span class="text-menu">KẾ TOÁN</span>
           </div>
         </div>
-        <div class="menu">
-          <div class="menu__item">
-            <a
-              class="menu-item__link menu-item__link--active"
-              href="#"
-              data-c-tooltip="Hế lo"
-            >
-              <div class="icon w-h-24 m-12 sidebar__dashboard"></div>
-              <div class="menu-item__title">Tổng quan</div>
-            </a>
+        <div>
+          <div class="menu">
+            <div class="menu__item">
+              <a
+                class="menu-item__link menu-item__link--active"
+                href="#"
+                data-c-tooltip="Hế lo"
+              >
+                <div class="icon w-h-24 m-12 sidebar__dashboard"></div>
+                <div class="menu-item__title">Tổng quan</div>
+              </a>
+            </div>
+            <div class="menu__item">
+              <a class="menu-item__link" href="#" data-c-tooltip="Hế lo">
+                <div class="icon w-h-24 m-12 sidebar__cash"></div>
+                <div class="menu-item__title">Tiền mặt</div>
+              </a>
+            </div>
+            <div class="menu__item">
+              <a class="menu-item__link" href="#" data-c-tooltip="Hế lo">
+                <div class="icon w-h-24 m-12 sidebar__bank"></div>
+                <div class="menu-item__title">Tiền gửi</div>
+              </a>
+            </div>
+            <div class="menu__item">
+              <a class="menu-item__link" href="#" data-c-tooltip="Hế lo">
+                <div class="icon w-h-24 m-12 sidebar__purchase"></div>
+                <div class="menu-item__title">Mua hàng</div>
+              </a>
+            </div>
+            <div class="menu__item">
+              <a class="menu-item__link" href="#" data-c-tooltip="Hế lo">
+                <div class="icon w-h-24 m-12 sidebar__sale"></div>
+                <div class="menu-item__title">Bán hàng</div>
+              </a>
+            </div>
+            <div class="menu__item">
+              <a class="menu-item__link" href="#" data-c-tooltip="Hế lo">
+                <div class="icon w-h-24 m-12 sidebar__invoice"></div>
+                <div class="menu-item__title">Quản lý đơn</div>
+              </a>
+            </div>
+            <div class="menu__item">
+              <a class="menu-item__link" href="#" data-c-tooltip="Hế lo">
+                <div class="icon w-h-24 m-12 sidebar__stock"></div>
+                <div class="menu-item__title">Kho</div>
+              </a>
+            </div>
+            <div class="menu__item">
+              <a class="menu-item__link" href="#" data-c-tooltip="Hế lo">
+                <div class="icon w-h-24 m-12 sidebar__tools"></div>
+                <div class="menu-item__title">Công cụ dụng cụ</div>
+              </a>
+            </div>
+            <div class="menu__item">
+              <a class="menu-item__link" href="#" data-c-tooltip="Hế lo">
+                <div class="icon w-h-24 m-12 sidebar__fixed-assets"></div>
+                <div class="menu-item__title">Tài sản cố định</div>
+              </a>
+            </div>
+            <div class="menu__item">
+              <a class="menu-item__link" href="#" data-c-tooltip="Hế lo">
+                <div class="icon w-h-24 m-12 sidebar__tax"></div>
+                <div class="menu-item__title">Thuế</div>
+              </a>
+            </div>
+            <div class="menu__item">
+              <a class="menu-item__link" href="#" data-c-tooltip="Hế lo">
+                <div class="icon w-h-24 m-12 sidebar__price"></div>
+                <div class="menu-item__title">Giá thành</div>
+              </a>
+            </div>
+            <div class="menu__item">
+              <a class="menu-item__link" href="#" data-c-tooltip="Hế lo">
+                <div class="icon w-h-24 m-12 sidebar__general"></div>
+                <div class="menu-item__title">Tổng hợp</div>
+              </a>
+            </div>
+            <div class="menu__item">
+              <a class="menu-item__link" href="#" data-c-tooltip="Hế lo">
+                <div class="icon w-h-24 m-12 sidebar__budget"></div>
+                <div class="menu-item__title">Ngân sách</div>
+              </a>
+            </div>
+            <div class="menu__item">
+              <a class="menu-item__link" href="#" data-c-tooltip="Hế lo">
+                <div class="icon w-h-24 m-12 sidebar__report"></div>
+                <div class="menu-item__title">Báo cáo</div>
+              </a>
+            </div>
+            <div class="menu__item">
+              <a class="menu-item__link" href="#" data-c-tooltip="Hế lo">
+                <div class="icon w-h-24 m-12 sidebar__finance"></div>
+                <div class="menu-item__title">Phân tích tài chính</div>
+              </a>
+            </div>
           </div>
-          <div class="menu__item">
-            <a class="menu-item__link" href="#" data-c-tooltip="Hế lo">
-              <div class="icon w-h-24 m-12 sidebar__cash"></div>
-              <div class="menu-item__title">Tiền mặt</div>
-            </a>
-          </div>
-          <div class="menu__item">
-            <a class="menu-item__link" href="#" data-c-tooltip="Hế lo">
-              <div class="icon w-h-24 m-12 sidebar__bank"></div>
-              <div class="menu-item__title">Tiền gửi</div>
-            </a>
-          </div>
-          <div class="menu__item">
-            <a class="menu-item__link" href="#" data-c-tooltip="Hế lo">
-              <div class="icon w-h-24 m-12 sidebar__purchase"></div>
-              <div class="menu-item__title">Mua hàng</div>
-            </a>
-          </div>
-          <div class="menu__item">
-            <a class="menu-item__link" href="#" data-c-tooltip="Hế lo">
-              <div class="icon w-h-24 m-12 sidebar__sale"></div>
-              <div class="menu-item__title">Bán hàng</div>
-            </a>
-          </div>
-          <div class="menu__item">
-            <a class="menu-item__link" href="#" data-c-tooltip="Hế lo">
-              <div class="icon w-h-24 m-12 sidebar__invoice"></div>
-              <div class="menu-item__title">Quản lý đơn</div>
-            </a>
-          </div>
-          <div class="menu__item">
-            <a class="menu-item__link" href="#" data-c-tooltip="Hế lo">
-              <div class="icon w-h-24 m-12 sidebar__stock"></div>
-              <div class="menu-item__title">Kho</div>
-            </a>
-          </div>
-          <div class="menu__item">
-            <a class="menu-item__link" href="#" data-c-tooltip="Hế lo">
-              <div class="icon w-h-24 m-12 sidebar__tools"></div>
-              <div class="menu-item__title">Công cụ dụng cụ</div>
-            </a>
-          </div>
-          <div class="menu__item">
-            <a class="menu-item__link" href="#" data-c-tooltip="Hế lo">
-              <div class="icon w-h-24 m-12 sidebar__fixed-assets"></div>
-              <div class="menu-item__title">Tài sản cố định</div>
-            </a>
-          </div>
-
-          <div class="menu__item">
-            <a class="menu-item__link" href="#" data-c-tooltip="Hế lo">
-              <div class="icon w-h-24 m-12 sidebar__tax"></div>
-              <div class="menu-item__title">Thuế</div>
-            </a>
-          </div>
-          <div class="menu__item">
-            <a class="menu-item__link" href="#" data-c-tooltip="Hế lo">
-              <div class="icon w-h-24 m-12 sidebar__price"></div>
-              <div class="menu-item__title">Giá thành</div>
-            </a>
-          </div>
-          <div class="menu__item">
-            <a class="menu-item__link" href="#" data-c-tooltip="Hế lo">
-              <div class="icon w-h-24 m-12 sidebar__general"></div>
-              <div class="menu-item__title">Tổng hợp</div>
-            </a>
-          </div>
-          <div class="menu__item">
-            <a class="menu-item__link" href="#" data-c-tooltip="Hế lo">
-              <div class="icon w-h-24 m-12 sidebar__budget"></div>
-              <div class="menu-item__title">Ngân sách</div>
-            </a>
-          </div>
-          <div class="menu__item">
-            <a class="menu-item__link" href="#" data-c-tooltip="Hế lo">
-              <div class="icon w-h-24 m-12 sidebar__report"></div>
-              <div class="menu-item__title">Báo cáo</div>
-            </a>
-          </div>
-          <div class="menu__item">
-            <a class="menu-item__link" href="#" data-c-tooltip="Hế lo">
-              <div class="icon w-h-24 m-12 sidebar__finance"></div>
-              <div class="menu-item__title">Phân tích tài chính</div>
-            </a>
+          <div class="sidebar__collapse">
+            <div class="sidebar__collapse--click">
+              <div class="icon w-h-24 sidebar-collapse__icon"></div>
+              <div class="sidebar-collapse__title">Thu gọn</div>
+            </div>
           </div>
         </div>
       </div>
+      <!-- Main -->
       <div class="main">
-        <div class="main__header">
-          <div class="main__header--left">
+        <!-- Header -->
+        <div class="header">
+          <div class="header--left">
             <div class="icon w-h-24 header__icon"></div>
             <div class="header__branch">CÔNG TY TNHH SONG VIỆT - Misatest</div>
             <div class="icon w-h-24 header__branch-drop-down"></div>
           </div>
-          <div class="main__header--right">
+          <div class="header--right">
             <div class="icon w-h-24 header__notify"></div>
             <button class="header__user">
               <div class="icon user__avt"></div>
@@ -131,62 +147,117 @@
             </button>
           </div>
         </div>
+        <!-- Content -->
         <div class="content">
+          <!-- Toolbar -->
           <div class="content__toolbar">
             <div class="content__title">Nhân viên</div>
-            <button id="btn--add" class="btn btn--primary">
+            <button class="btn btn--primary" id="btn--add">
               Thêm mới nhân viên
             </button>
           </div>
+          <!-- List -->
           <div class="content__list">
-            <div class="list__toolbar">
-              <input type="text" class="input list__search" />
-              <button id="list__reload"></button>
+            <!-- list header -->
+            <div class="flex list__header">
+              <div class="list-header--left">
+                <div class="flex list__toolbar">
+                  <input
+                    type="text"
+                    class="input input-list__search"
+                    placeholder="Tìm theo mã, tên nhân viên"
+                  />
+                  <button class="btn icon btn--small btn__search"></button>
+                </div>
+              </div>
+              <div class="flex list-header--right">
+                <div class="flex list-header--chose-company">
+                  <input
+                    type="text"
+                    class="combobox input company__input"
+                    placeholder="Chọn công ty"
+                  />
+                  <div class="sub-list-company">
+                    <div class="company__item company__item-title">
+                      - Chọn giá trị -
+                      <div class="icon w-h-24 company__item-title-icon"></div>
+                    </div>
+                    <div class="company__item">Hà Nội</div>
+                    <div class="company__item">TP.Hồ Chí Minh</div>
+                  </div>
+                  <div class="icon company__icon"></div>
+                </div>
+                <button class="icon btn btn--small" id="btn__reload"></button>
+              </div>
             </div>
+            <!-- Table -->
             <div class="list__table">
-              <table border="1" border-collapse="collapse">
+              <table>
                 <thead>
                   <tr>
-                    <th>
+                    <th class="width-table-checkbox">
                       <input type="checkbox" name="" id="" />
                     </th>
-                    <th>MÃ NHÂN VIÊN</th>
-                    <th>TÊN NHÂN VIÊN</th>
-                    <th>GIỚI TÍNH</th>
-                    <th>NGÀY SINH</th>
-                    <th>SỐ CMTND</th>
-                    <th>CHỨC DANH</th>
-                    <th>TÊN ĐƠN VỊ</th>
-                    <th>SỐ TÀI KHOẢN</th>
-                    <th>TÊN NGÂN HÀNG</th>
-                    <th>CHI NHANH TÀI KHOẢN NGÂN HÀNG</th>
-                    <th>CHỨC NĂNG</th>
+                    <th class="text-align-left w-150">Mã nhân viên</th>
+                    <th class="text-align-left">Tên nhân viên</th>
+                    <th class="text-align-left w-100">Giới tính</th>
+                    <th class="text-align-left w-150">Ngày sinh</th>
+                    <th class="text-align-left">Số CMTND</th>
+                    <th class="text-align-left">Chức danh</th>
+                    <th class="text-align-right">Tiền lương</th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
-                    <td><input type="checkbox" name="" id="" /></td>
-                    <td>00012</td>
-                    <td>Nguyễn Văn Liệt</td>
-                    <td>Nam</td>
-                    <td>31/12/2001</td>
-                    <td>2354656</td>
-                    <td>Trưởng nhóm</td>
-                    <td>Xay - Keo phối trộn</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td>
-                      <div class="function">
-                        <div class="function__title">Sửa</div>
-                        <button class="btn function__btn"></button>
-                      </div>
+                    <td class="width-table-checkbox">
+                      <input type="checkbox" name="" id="" />
                     </td>
+                    <td class="text-align-left w-150">00012</td>
+                    <td class="text-align-left">Nguyễn Văn Liệt</td>
+                    <td class="text-align-left">Nam</td>
+                    <td class="text-align-left w-150">31/12/2001</td>
+                    <td class="text-align-left w-150">2354656579425</td>
+                    <td class="text-align-left">Trưởng nhóm</td>
+                    <td class="text-align-right">10.000.000 VNĐ</td>
+                  </tr>
+
+                  <tr>
+                    <td class="width-table-checkbox">
+                      <input type="checkbox" name="" id="" />
+                    </td>
+                    <td class="text-align-left w-150">00012</td>
+                    <td class="text-align-left">Nguyễn Văn Liệt</td>
+                    <td class="text-align-left">Nam</td>
+                    <td class="text-align-left w-150">31/12/2001</td>
+                    <td class="text-align-left w-150">2354656579425</td>
+                    <td class="text-align-left">Trưởng nhóm</td>
+                    <td class="text-align-right">1.000.000 VNĐ</td>
                   </tr>
                 </tbody>
               </table>
             </div>
-            <div class="list__pagination"></div>
+          </div>
+          <!-- Pagination -->
+          <div class="content__footer">
+            <div class="content--left">
+              <div class="total-record">
+                Tổng số :
+                <b>13</b>
+              </div>
+            </div>
+            <div class="content--right">
+              <div class="flex pagination">
+                <div class="flex combobox record-in-page">
+                  Số bản ghi/trang: 10
+                  <div class="icon w-h-24 pagination-icon"></div>
+                </div>
+                <div class="page__index"><b>1 - 4</b> bản ghi</div>
+                <div class="flex">
+                  <div class="icon w-h-24 page__prev"></div>
+                  <div class="icon w-h-24 page__next"></div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
