feat: ve xong dialog

--- a/pages/index.html
+++ b/pages/index.html
@@ -262,5 +262,19 @@
         </div>
       </div>
     </div>
+    <!-- Dialog -->
+    <div class="dialog" hidden>
+      <div class="dialog__content">
+        <div class="dialog-content__header">
+          Tiêu đề
+          <div class="icon w-h-24 dialog__header-icon"></div>
+        </div>
+        <div class="dialog-content__container">Mô tả</div>
+        <div class="dialog-content__footer">
+          <button class="btn btn--primary">Cất</button>
+          <button class="btn btn--secondary">Huy</button>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
