--- a/pages/index.html
+++ b/pages/index.html
@@ -276,5 +276,67 @@
         </div>
       </div>
     </div>
+    <!--toast  -->
+    <div class="toast" hidden>
+      <div class="flex toast__content">
+        <div class="flex toast--left">
+          <div class="icon w-h-24 toast-left-icon"></div>
+          <div class="toast__desc">
+            <span class="toast__desc--status">Thành công</span>
+            Công việc đã bị xóa
+          </div>
+        </div>
+        <div class="flex oast--right">
+          <div class="toast__act"><u>Hoàn tác</u></div>
+          <div class="icon w-h-24 toast-right-icon"></div>
+        </div>
+      </div>
+    </div>
+    <!-- Form sign up  -->
+    <div class="form">
+      <div class="form__wrapper">
+        <form action="">
+          <div class="form__header">
+            <h1 class="heading form__title">Đăng ký tài khoản</h1>
+          </div>
+          <div class="form__content">
+            <div class="form__name">
+              <label for="">Họ và tên</label>
+              <br />
+              <input
+                type="text"
+                class="input input__form-name"
+                placeholder="Họ tên đầy đủ"
+              />
+            </div>
+            <div class="form__sex">
+              <label for="" class="form__sex">Giới tính</label>
+              <br />
+              <input type="radio" class="input__form-sex-male" /> Nam
+              <br />
+              <input type="radio" class="input__form-sex-female" />Nữ
+            </div>
+            <div class="form_-birth">
+              <label for="" class="form__birth">Ngày sinh</label>
+              <br />
+              <input type="date" class="input input__form-birth" />
+            </div>
+            <div class="form__email">
+              <label for="" class="form__email">Email</label>
+              <br />
+              <input
+                type="email"
+                class="input input__form-email"
+                placeholder="example@gmail.com"
+              />
+            </div>
+          </div>
+          <div class="flex form__footer">
+            <button class="btn btn--primary">Đăng ký</button>
+            <button class="btn btn--secondary">Hủy</button>
+          </div>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
