fix: khi ky tu dai o dialog

--- a/pages/index.html
+++ b/pages/index.html
@@ -268,10 +268,10 @@
       </div>
     </div>
     <!-- Dialog -->
-    <div class="dialog" hidden>
+    <div id="dialog" class="dialog" hidden>
       <div class="dialog__content">
-        <div class="dialog-content__header">
-          Tiêu đề
+        <div class="flex dialog-content__header">
+          <span class=" dialog-header__title">Tiêu đề </span>
           <div class="icon w-h-24 dialog__header-icon"></div>
         </div>
         <div class="dialog-content__container">Mô tả</div>
