--- a/pages/index.html
+++ b/pages/index.html
@@ -161,11 +161,11 @@
             <!-- list header -->
             <div class="flex list__header">
               <div class="list-header--left">
-                <div id="" class="flex input__wrapper list__toolbar">
+                <div id="" class="flex  input__wrapper list__toolbar">
                   <input
                     type="text"
-                    id="input-show "
-                    class="input no-border-focus input-list__search"
+                    id="input-show"
+                    class="input no-border no-border-focus input-list__search"
                     placeholder="Tìm theo mã, tên nhân viên"
                   />
                   <button class="btn icon btn--small btn__search"></button>
@@ -179,7 +179,7 @@
                   <input
                     type="text"
                     id="input-show"
-                    class="combobox input no-border-focus company__input"
+                    class="combobox no-border  input no-border-focus company__input"
                     placeholder="Chọn công ty"
                   />
                   <div class="sub-list-company">
@@ -203,41 +203,75 @@
                     <th class="width-table-checkbox">
                       <input type="checkbox" name="" id="" />
                     </th>
-                    <th class="text-align-left w-150">Mã nhân viên</th>
-                    <th class="text-align-left">Tên nhân viên</th>
-                    <th class="text-align-left w-100">Giới tính</th>
-                    <th class="text-align-left w-150">Ngày sinh</th>
-                    <th class="text-align-left">Số CMTND</th>
-                    <th class="text-align-left">Chức danh</th>
-                    <th class="text-align-right">Tiền lương</th>
+                    <th class="w-200  text-align-left ">
+                      <div class="flex table-header">Mã nhân viên
+                        <div class=" table-header-icon-wrapper">
+                          <span class="flex" style="justify-content: space-between;">
+                            <div class="icon w-h-24 table-icon--sort"></div>
+                            <div class="icon w-h-24 table-icon-filter"></div>
+                          </span>
+                          
+                        </div>
+                      </div>
+                    </th>
+                    <th class="text-align-left">
+                      <div class="flex table-header">Tên nhân viên
+                        <div class=" table-header-icon-wrapper">
+                          <span class="flex" style="justify-content: space-between;">
+                            <div class="icon w-h-24 table-icon--sort"></div>
+                            <div class="icon w-h-24 table-icon-filter"></div>
+                          </span>
+                        </div>
+                      </div>
+                    </th>
+                    <th class="text-align-left w-150">
+                      <div class="flex table-header">Giới tính
+                        <div class=" table-header-icon-wrapper">
+                          <span class="flex" style="justify-content: space-between;">
+                            <div class="icon w-h-24 table-icon--sort"></div>
+                            <div class="icon w-h-24 table-icon-filter"></div>
+                          </span>
+                        </div>
+                      </div>
+                    </th>
+                    <th class="text-align-left w-150">
+                      <div class="flex table-header">Ngày sinh
+                        <div class=" table-header-icon-wrapper">
+                          <span class="flex" style="justify-content: space-between;">
+                            <div class="icon w-h-24 table-icon--sort"></div>
+                            <div class="icon w-h-24 table-icon-filter"></div>
+                          </span>
+                        </div>
+                      </div>
+                    </th>
+                    <th class="text-align-right ">
+                      <div class="flex text-align-right table-header" style="justify-content: flex-end;">
+                        <div class=" table-header-icon-wrapper">
+                          <span class="flex" style="justify-content: space-between;">
+                            <div class="icon w-h-24 table-icon--sort"></div>
+                            <div class="icon w-h-24 table-icon-filter"></div>
+                          </span>
+                        </div>
+                        <span >Lương</span>
+                      </div>
+                    </th>
+                    <th class="text-align-left w-150">
+                      <div class="flex table-header">Chức danh
+                        <div class=" table-header-icon-wrapper">
+                          <span class="flex" style="justify-content: space-between;">
+                            <div class="icon w-h-24 table-icon--sort"></div>
+                            <div class="icon w-h-24 table-icon-filter"></div>
+                          </span>
+                        </div>
+                      </div>
+                    </th>
+                    <th class="text-align-left w-150">
+                      Chức năng
+                    </th>
                   </tr>
                 </thead>
                 <tbody>
-                  <tr>
-                    <td class="width-table-checkbox">
-                      <input type="checkbox" name="" id="" />
-                    </td>
-                    <td class="text-align-left w-150">00012</td>
-                    <td class="text-align-left">Nguyễn Văn Liệt</td>
-                    <td class="text-align-left">Nam</td>
-                    <td class="text-align-left w-150">31/12/2001</td>
-                    <td class="text-align-left w-150">2354656579425</td>
-                    <td class="text-align-left">Trưởng nhóm</td>
-                    <td class="text-align-right">10.000.000 VNĐ</td>
-                  </tr>
-
-                  <tr>
-                    <td class="width-table-checkbox">
-                      <input type="checkbox" name="" id="" />
-                    </td>
-                    <td class="text-align-left w-150">00012</td>
-                    <td class="text-align-left">Nguyễn Văn Liệt</td>
-                    <td class="text-align-left">Nam</td>
-                    <td class="text-align-left w-150">31/12/2001</td>
-                    <td class="text-align-left w-150">2354656579425</td>
-                    <td class="text-align-left">Trưởng nhóm</td>
-                    <td class="text-align-right">1.000.000 VNĐ</td>
-                  </tr>
+                  
                 </tbody>
               </table>
             </div>
@@ -268,7 +302,7 @@
       </div>
     </div>
     <!-- Dialog -->
-    <div id="dialog" class="dialog" hidden>
+    <div id="dialog" class="dialog">
       <div class="dialog__content">
         <div class="flex dialog-content__header">
           <span class=" dialog-header__title">Tiêu đề </span>
@@ -334,7 +368,7 @@
       </div>
     </div>
     <!-- Form sign up  -->
-    <div class="form">
+    <!-- <div id="form" class="form">
       <div class="form__wrapper">
         <form action="">
           <div class="form__header">
@@ -378,8 +412,220 @@
           </div>
         </form>
       </div>
+    </div> -->
+    <!-- Form add -->
+    <div id="form__add" class="form" >
+      <form class="form__wrapper" action="" >
+          <div class="flex form__header">
+            <div class="flex form__header--left">
+                <h1 class="heading form__title">Thông tin nhân viên</h1>
+                <span class="flex">
+                  <input class=" form-input-client" type="checkbox" name="" id=""> Là khách hàng
+                </span>
+              </div>
+              <div class="flex form__header--right">
+              <span class="flex">
+                <input class=" form-input-supplier" type="checkbox" name="" id=""> Là nhà cung cấp
+              </span>
+              <div class="flex form-icon">
+                <div class="icon w-h-24 form-icon--help"></div>
+                <div  class="icon w-h-24 form-icon--close  btn--close"></div>
+              </div>
+            </div>
+          </div>
+          <div class="flex form__content">
+            <div class=" form-content--left">
+              <div class="row col-gap">
+                <div class="form__id">
+                  <label for="">Mã <span class="input--required">*</span></label>
+                  <br />
+                  <input
+                    type="text"
+                    class="w-150 input__form-id"
+                    placeholder=""
+                  />
+                </div>
+                <div class="form__name">
+                  <label for="">Họ và tên <span class="input--required">*</span></label>
+                  <br />
+                  <input
+                    type="text"
+                    class=" input__form-name"
+                    placeholder=""
+                  />
+                </div>
+              </div>
+              <div class="row">
+                <div class="form__unit">
+                  <label for="">Đơn vị <span class="input--required">*</span></label>
+                  <br />
+                  <input
+                    type="text"
+                    class="input input__form-unit"
+                    placeholder=""
+                  />
+                </div>
+              </div>
+              <div class="row">
+                <div class="form__position">
+                  <label for="">Chức danh <span class="input--required">*</span></label>
+                  <br />
+                  <input
+                    type="text"
+                    class="input input__form-position"
+                    placeholder=""
+                  />
+                </div>
+              </div>
+              <div class="row">
+                <div class="form__group-supplier-client">
+                  <label for="">Nhóm khách hàng, nhà cung cấp</label>
+                  <br />
+                  <input
+                    type="text"
+                    class="input input__form-group-supplier-client"
+                    placeholder=""
+                  />
+                </div>
+              </div>
+            </div>
+            <div class=" form-content--right">
+              <div class="row col-gap">
+                <div class="form__birth">
+                  <label for="" class="form__birth">Ngày sinh</label>
+                  <br />
+                  <input type="date" class="input input__form-birth" />
+                </div>
+                <div class=" form__sex-wrapper">
+                  <label for="" class=" form__sex">Giới tính</label>
+                  <div class="flex form__male-wrapper">
+                    <input type="radio" class="input__form-sex-male" /> Nam
+                    <br />
+                    <input type="radio" class="input__form-sex-female" />Nữ
+                  </div>
+                </div>
+              </div>
+              <div class="row col-gap">
+                <div class="form__card-number">
+                  <label for="">Số CCCD/CMND</label>
+                  <br />
+                  <input
+                    type="text"
+                    class="input input__form-card-number"
+                    placeholder=""
+                  />
+                </div>
+                <div class="w-150 form__birth">
+                  <label for="" class="form__birth">Ngày cấp</label>
+                  <br />
+                  <input type="date" class=" input__form-birth" />
+                </div>
+              </div>
+              <div class="row">
+                <div class="form__issued-by">
+                  <label for="">Nơi cấp </label>
+                  <br />
+                  <input
+                    type="text"
+                    class="input input__form-issued-by"
+                    placeholder=""
+                  />
+                </div>
+              </div>
+              <div id="" class="row">
+                <div class="form__account">
+                  <label for="">TK công nợ phải trả </label>
+                  <br />
+                  <input type="text" class="input input__form-account">
+                  <div class="icon w-h-24 form__account-icon"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        <div class="form__navigation-popup">
+          <div class="form__popup-top">
+            <ul class="flex form__popup-list">
+              <li class="form__popup-item">Thông tin tiền lương</li>
+              <li class="form__popup-item">Tài khoản ngân hàng</li>
+              <li class="form__popup-item">Thông tin liên hệ</li>
+            </ul>
+          </div>
+          <div class="form__popup-container">
+            <div class="row form-popup-container-top">
+              <div class="">
+                <label for="">Lương thỏa thuận </label>
+                <br />
+                <input
+                  type="text"
+                  class="input input__form-salary"
+                  placeholder=""
+                />
+              </div>
+              <div class="">
+                <label for="">Hệ số lương</label>
+                <br />
+                <input
+                  type="text"
+                  class="input input__form-coefficients-salary"
+                  placeholder=""
+                />
+              </div>
+              <div class="">
+                <label for="">Lương đóng bảo hiểm</label>
+                <br />
+                <input
+                  type="text"
+                  class="input input__form-premium-salary"
+                  placeholder=""
+                />
+              </div>
+            </div>
+            <div class="row form-popup-container-bottom">
+              <div>
+                <label for="">Mã số thuế</label>
+                <br />
+                <input
+                  type="text"
+                  class="input input__form-tax-code"
+                  placeholder=""
+                />
+              </div>
+              <div>
+                <label for="">Loại hợp đồng <span class="input--required">*</span></label>
+                <br />
+                <div class="flex form-type-of-contract-wrapper">
+                  <input
+                  type="text"
+                  class="input input__form-type-of-contract"
+                  placeholder=""
+                />
+                <div class="icon w-h-24 form__type-of-contract-icon"></div>
+                </div>
+              </div>
+              <div>
+                <label for="">Số người phụ thuộc</label>
+                <br />
+                <div class="flex form__number-of-dependents-wrapper">
+                  <input
+                  type="text"
+                  class="input input__form-number-of-dependents"
+                  placeholder=""
+                />
+                <div class="icon w-h-24 form__dependents-icon">
+                  <div class="form__dependents-icon-top"></div>
+                  <div class="form__dependents-icon-bottom"></div>
+                </div>
+                </div>
+              </div>
+            </div> 
+        </div>
+        <div class="flex form__footer">
+          <button class="btn btn--primary">Đăng ký</button>
+          <button  class="btn btn--secondary btn--close">Hủy</button>
+        </div>
+      </form>
     </div>
-    <script></script>
+    <script src="../js/jquery-3.6.1.min.js"></script>
     <script src="../js/app.js"></script>
   </body>
 </html>
